--- a/_posts/2019-02-17-lombok.markdown
+++ b/_posts/2019-02-17-lombok.markdown
@@ -433,6 +433,103 @@ public class Foo extends Bar {
 
 ### Log
 
+快速生成各种Log对象，支持各种log框架
+
+There are several choices available:
+
+@CommonsLog
+
+Creates private static final org.apache.commons.logging.Log log = org.apache.commons.logging.LogFactory.getLog(LogExample.class);
+
+@Flogger
+
+Creates private static final com.google.common.flogger.FluentLogger log = com.google.common.flogger.FluentLogger.forEnclosingClass();
+
+@JBossLog
+
+Creates private static final org.jboss.logging.Logger log = org.jboss.logging.Logger.getLogger(LogExample.class);
+
+@Log
+
+Creates private static final java.util.logging.Logger log = java.util.logging.Logger.getLogger(LogExample.class.getName());
+
+@Log4j
+
+Creates private static final org.apache.log4j.Logger log = org.apache.log4j.Logger.getLogger(LogExample.class);
+
+@Log4j2
+
+Creates private static final org.apache.logging.log4j.Logger log = org.apache.logging.log4j.LogManager.getLogger(LogExample.class);
+
+@Slf4j
+
+Creates private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(LogExample.class);
+
+@XSlf4j
+
+Creates private static final org.slf4j.ext.XLogger log = org.slf4j.ext.XLoggerFactory.getXLogger(LogExample.class);
+
+By default, the topic (or name) of the logger will be the class name of the class annotated with the @Log annotation. This can be customised by specifying the topic parameter. 
+
+For example: @XSlf4j(topic="reporting").
+
+```java
+
+ import lombok.extern.java.Log;
+import lombok.extern.slf4j.Slf4j;
+
+@Log
+public class LogExample {
+  
+  public static void main(String... args) {
+    log.severe("Something's wrong here");
+  }
+}
+
+@Slf4j
+public class LogExampleOther {
+  
+  public static void main(String... args) {
+    log.error("Something else is wrong here");
+  }
+}
+
+@CommonsLog(topic="CounterLog")
+public class LogExampleCategory {
+
+  public static void main(String... args) {
+    log.error("Calling the 'CounterLog' with a message");
+  }
+}
+```
+等效代码
+```java
+
+ public class LogExample {
+  private static final java.util.logging.Logger log = java.util.logging.Logger.getLogger(LogExample.class.getName());
+  
+  public static void main(String... args) {
+    log.severe("Something's wrong here");
+  }
+}
+
+public class LogExampleOther {
+  private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(LogExampleOther.class);
+  
+  public static void main(String... args) {
+    log.error("Something else is wrong here");
+  }
+}
+
+public class LogExampleCategory {
+  private static final org.apache.commons.logging.Log log = org.apache.commons.logging.LogFactory.getLog("CounterLog");
+
+  public static void main(String... args) {
+    log.error("Calling the 'CounterLog' with a message");
+  }
+}
+```
+
 ### @EqualsAndHashCode
 
 默认情况下，会使用所有非静态（non-static）和非瞬态（non-transient）属性来生成equals和hasCode，也能通过exclude注解来排除一些属性。
