--- a/_posts/2019-03-07-scala3.markdown
+++ b/_posts/2019-03-07-scala3.markdown
@@ -6,17 +6,17 @@ categories: jekyll update
 tags: 技术 Scala
 ---
 
-# 学习笔记 （三）
+## 学习笔记 （三）
 
-## Scala元组、集合、数组、迭代器和混入
+### Scala元组、集合、数组和迭代器
 
-### Scala元组
+#### Scala元组
 
 在Scala中，元组是一个可以容纳不同类型元素的类。**元组是不可变的**。
 
 元组的最大长度是22。当我们需要从函数返回多个类型的多个值时，元组会派上用场。
 
-#### 创建元组的方式
+##### 创建元组的方式
 
 ```scala
 // 方式1
@@ -27,13 +27,13 @@ val ingredient1 = (1, 3.14, "Fred")
 val ingredient2 = new Tuple3(1, 3.14, "Fred")
 ```
 
-#### 元组的访问
+##### 元组的访问
 ```scala
 println(ingredient._1) // Sugar
 
 println(ingredient._2) // 25
 ```
-#### 解构（Pattern matching 直译 模式匹配）元组数据
+##### 解构（Pattern matching 直译 模式匹配）元组数据
 
 样例1
 
@@ -63,7 +63,7 @@ for ((a, b) <- numPairs) {
 }
 ```
 
-#### 主要方法
+##### 主要方法
 
 元组对象自带几个方法
 - 可以使用 Tuple.productIterator() 方法来迭代输出元组的所有元素
@@ -80,18 +80,18 @@ object Test {
 
 - 可以使用 Tuple.swap 方法来交换元组的元素
 
-### 数组
+#### 数组
 
 Scala 语言中提供的数组是用来存储固定大小的同类型元素，数组对于每一门编辑应语言来说都是重要的数据结构之一。
 
 Scala 的数组和java的数组差别不大
 
-#### 数组定义
+##### 数组定义
 
-#### 数组操作
+##### 数组操作
 和别的语言没啥差别，使用索引选择数组内元素
 
-#### 数组方法
+##### 数组方法
 
 序号|方法|描述
 -|-|-
@@ -104,7 +104,7 @@ Scala 的数组和java的数组差别不大
 
 (Scala Array API)[https://www.scala-lang.org/api/current/scala/Array.html]
 
-### 集合
+#### 集合
 
 Scala集合是scala提供的集合实现，不同于java的集合实现，Scala的集合实现有一些特殊的方法，而且构造也和标准的java集合不同
 Scala的集合分为可变（mutable）和不可变（immutable）集合
@@ -113,7 +113,7 @@ Scala的集合分为可变（mutable）和不可变（immutable）集合
 
 而不可变集合类，相比之下，永远不会改变。不过，你仍然可以模拟添加，移除或更新操作。但是这些操作将在每一种情况下都返回一个新的集合，同时使原来的集合不发生改变。
 
-#### Scala List
+##### Scala List
 
 注意哦，和java不同，List不是java里面的接口，List不是Scala里的train，而是集合的实现，一种不可变集合，Scala里面还有别的list，但是没有ArrayList，有LinkedList双链列表。
 
@@ -129,7 +129,7 @@ Scala的集合分为可变（mutable）和不可变（immutable）集合
 
 Scala是多范式语言，Scala是支持函数式编程，而且支持程度非常高。比jdk8的steam化更彻底。
 
-#### Scala Set
+##### Scala Set
 
 Set在Scala中有可变的和不可变的两种。
 **注意，Set是Train不是具体实现，但是由于存在类型推倒能力，可以直接使用Set而不指定具体的实现类。**
@@ -173,7 +173,7 @@ println(another.getClass.getName) // scala.collection.immutable.Set
 
 **Scala里面，集合可以使用运算符号的，比如 +、-、++**
 
-#### Scala Map
+##### Scala Map
 
 Map(映射)是一种可迭代的键值对（key/value）结构。
 
@@ -200,7 +200,7 @@ val colors = Map("red" -> "#FF0000", "azure" -> "#F0FFFF")
 - values 返回Map所有的值（value）
 - isEmpty 在Map为空时返回true
 
-#### Scala Option
+##### Scala Option
 
 这个概念和jdk1.8之后引入的option概念是一样的
 Scala Option(选项)类型用来表示一个值是可选的（有值或无值)。
@@ -220,7 +220,7 @@ println(value1) // Some("value1")
 println(value2) // None
 ```
 
-### 迭代器
+#### 迭代器
 
 Scala Iterator（迭代器）不是一个集合，它是一种用于访问集合的方法。
 
