--- a/_posts/2019-04-08-redux.markdown
+++ b/_posts/2019-04-08-redux.markdown
@@ -461,7 +461,10 @@ if (typeof reducer !== 'function') {
 
 ```js
 
-import React, { PropTypes } from 'react';import { Provider } from 'react-redux';import { Router, Route, browserHistory } from 'react-router';import App from './App';
+import React, { PropTypes } from 'react';
+import { Provider } from 'react-redux';
+import { Router, Route, browserHistory } from 'react-router';
+import App from './App';
 
 const Root = ({ store }) => (
   <Provider store={store}>
