--- a/_posts/2019-04-08-redux.markdown
+++ b/_posts/2019-04-08-redux.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Redux教程"
 date: 2019-04-08 20:25:00 +0800
 categories: jekyll update
-tags: 技术 redux
+tags: 技术 js
 ---
 
 # redux
